[workspace]
resolver = "2"
members = [
    "packages/build",
    "packages/procname-checker",
    "packages/corelib",
    "packages/cli",
    "packages/registry",
]

[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.8.0"
# path = "../cu/packages/copper"

[workspace.dependencies.pm]
package = "pistonite-pm"
version = "0.2.6"
default-features = false
# path = "../cu/packages/promethium"

[workspace.dependencies.win-envedit]
version = "0.1.6"
git = "https://github.com/Pistonite/shellutils"
branch = "main"

[workspace.dependencies.viopen]
version = "0.2.0"
git = "https://github.com/Pistonite/shellutils"
branch = "main"

[workspace.dependencies]
enum-map = "2.7.3"
enumset = "1.1.10"
itertools = "0.14.0"
flate2 = "1.1.9"
tar = "0.4.44"
libc = "0.2.183"
shell-words = "1.1.1"
ignore = "0.4.25"
zip = "7.4.0"
xz2 = "0.1.7"
sha2 = "0.10.9"
