[workspace]
resolver = "2"
members = [
    "packages/build",
    "packages/procname-checker",
    "packages/corelib",
    "packages/cli",
    "packages/registry",
    "packages/shaftim",
    "packages/shaftim-build",
    "packages/shutil-lfmt",
    "packages/shutil-n",
    "packages/shutil-viopen",
    "packages/shutil-vipath",
    "packages/shutil-which",
    "packages/shutil-wsclip",
    "packages/win-envedit",
]

[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.8.3"
# path = "../cu/packages/copper"

[workspace.dependencies.pm]
package = "pistonite-pm"
version = "0.2.6"
default-features = false
# path = "../cu/packages/promethium"

[workspace.dependencies]
enum-map = "2.7.3"
enumset = "1.1.13"
itertools = "0.14.0"
flate2 = "1.1.9"
libc = "0.2.186"
shell-words = "1.1.1"
ignore = "0.4.25"
sha2 = "0.11.0"
windows = "0.62.2"
phf = "0.13.1"
serde = "1"
tokio = "1"
sysinfo = "0.38.4" # need to build on rust-version 1.93
reqwest = "0.13.4"
boa_engine = "0.21.1"
fs2 = "0.4.3"
fxhash = "0.2.1"
winreg = "0.56.0"
which = "8.0.2"
clap = "4.6.1"
tungstenite = "0.29.0"
clipboard-win = "5.4.1"

[patch.crates-io]
# https://github.com/Alexhuszagh/float16/pull/15 breaks in ms-prod
float16 = { git = "https://github.com/musicinmybrain/float16", rev = "144e0702060dccb581294cae07da25d9f26a0e0f" }
